@@ -1,3 +1,8 @@
+2012-03-26
+
+	* src/menu.[ch]
+	  src/folderview.c: enabled menu popup with Menu key.
+
 2012-03-02
 
 	* libsylph/imap.c: relaxed the response check of AUTHENTICATE and
